--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- Header Section -->
     <header class="bg-gray-700 text-white py-20">
         <div class="container mx-auto text-center">
-            <h2 class="text-4xl font-bold mb-4">Hello, I'm [Your Name]</h2>
+            <h2 class="text-4xl font-bold mb-4">Hello, I'm Steven Jackson</h2>
             <p class="text-xl">A Networking & Information Systems Security Specialist</p>
         </div>
     </header>
