--- a/index.html
+++ b/index.html
@@ -42,43 +42,43 @@
     </section>
 
     <!-- Skills Section -->
-    <section id="skills" class="bg-gray-200 py-20">
-        <div class="container mx-auto">
-            <h3 class="text-3xl font-bold text-center mb-12">Skills</h3>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                <div class="bg-white p-6 shadow-md rounded-md text-center">
-                    <i class="fas fa-network-wired text-4xl text-blue-600 mb-4"></i>
-                    <h4 class="text-xl font-semibold">Network Configuration</h4>
-                    <p>Designing and configuring reliable networks using the latest technologies.</p>
-                </div>
-                <div class="bg-white p-6 shadow-md rounded-md text-center">
-                    <i class="fas fa-shield-alt text-4xl text-green-600 mb-4"></i>
-                    <h4 class="text-xl font-semibold">Information Security</h4>
-                    <p>Implementing network firewalls, endpoint security, and incident response systems.</p>
-                </div>
-                <div class="bg-white p-6 shadow-md rounded-md text-center">
-                    <i class="fas fa-user-secret text-4xl text-red-600 mb-4"></i>
-                    <h4 class="text-xl font-semibold">Ethical Hacking</h4>
-                    <p>Performing vulnerability assessments and penetration testing to uncover security gaps.</p>
-                </div>
-                <div class="bg-white p-6 shadow-md rounded-md text-center">
-                    <i class="fas fa-cloud text-4xl text-indigo-600 mb-4"></i>
-                    <h4 class="text-xl font-semibold">Cloud Security</h4>
-                    <p>Securing cloud infrastructure and ensuring compliance with best practices.</p>
-                </div>
-                <div class="bg-white p-6 shadow-md rounded-md text-center">
-                    <i class="fas fa-lock text-4xl text-purple-600 mb-4"></i>
-                    <h4 class="text-xl font-semibold">Encryption Technologies</h4>
-                    <p>Expertise in encryption protocols for data confidentiality and integrity.</p>
-                </div>
-                <div class="bg-white p-6 shadow-md rounded-md text-center">
-                    <i class="fas fa-database text-4xl text-yellow-600 mb-4"></i>
-                    <h4 class="text-xl font-semibold">Data Protection</h4>
-                    <p>Ensuring the secure storage, access, and transfer of sensitive information.</p>
-                </div>
+<section id="skills" class="bg-gray-200 py-20">
+    <div class="container mx-auto">
+        <h3 class="text-3xl font-bold text-center mb-12">Skills</h3>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+            <div class="bg-white p-6 shadow-md rounded-md text-center">
+                <i class="fas fa-network-wired text-4xl text-blue-600 mb-4"></i>
+                <h4 class="text-xl font-semibold"><a href="https://en.wikipedia.org/wiki/Computer_network" target="_blank" class="hover:text-blue-600">Network Configuration</a></h4>
+                <p>Designing and configuring reliable networks using the latest technologies.</p>
+            </div>
+            <div class="bg-white p-6 shadow-md rounded-md text-center">
+                <i class="fas fa-shield-alt text-4xl text-green-600 mb-4"></i>
+                <h4 class="text-xl font-semibold"><a href="https://en.wikipedia.org/wiki/Information_security" target="_blank" class="hover:text-green-600">Information Security</a></h4>
+                <p>Implementing network firewalls, endpoint security, and incident response systems.</p>
+            </div>
+            <div class="bg-white p-6 shadow-md rounded-md text-center">
+                <i class="fas fa-user-secret text-4xl text-red-600 mb-4"></i>
+                <h4 class="text-xl font-semibold"><a href="https://en.wikipedia.org/wiki/Penetration_test" target="_blank" class="hover:text-red-600">Ethical Hacking</a></h4>
+                <p>Performing vulnerability assessments and penetration testing to uncover security gaps.</p>
+            </div>
+            <div class="bg-white p-6 shadow-md rounded-md text-center">
+                <i class="fas fa-cloud text-4xl text-indigo-600 mb-4"></i>
+                <h4 class="text-xl font-semibold"><a href="https://en.wikipedia.org/wiki/Cloud_computing_security" target="_blank" class="hover:text-indigo-600">Cloud Security</a></h4>
+                <p>Securing cloud infrastructure and ensuring compliance with best practices.</p>
+            </div>
+            <div class="bg-white p-6 shadow-md rounded-md text-center">
+                <i class="fas fa-lock text-4xl text-purple-600 mb-4"></i>
+                <h4 class="text-xl font-semibold"><a href="https://en.wikipedia.org/wiki/Encryption" target="_blank" class="hover:text-purple-600">Encryption Technologies</a></h4>
+                <p>Expertise in encryption protocols for data confidentiality and integrity.</p>
+            </div>
+            <div class="bg-white p-6 shadow-md rounded-md text-center">
+                <i class="fas fa-database text-4xl text-yellow-600 mb-4"></i>
+                <h4 class="text-xl font-semibold"><a href="https://en.wikipedia.org/wiki/Data_security" target="_blank" class="hover:text-yellow-600">Data Protection</a></h4>
+                <p>Ensuring the secure storage, access, and transfer of sensitive information.</p>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- Projects Section -->
     <section id="projects" class="py-20">
@@ -100,7 +100,7 @@
         <div class="container mx-auto text-center">
             <h3 class="text-3xl font-bold mb-4">Get In Touch</h3>
             <p class="text-lg mb-8">Feel free to contact me for any project or job opportunity.</p>
-            <a href="mailto:your.email@example.com" class="bg-blue-600 text-white py-3 px-8 rounded-md hover:bg-blue-700">Contact Me</a>
+            <a href="mailto:sjackson4430@gmail.com" class="bg-blue-600 text-white py-3 px-8 rounded-md hover:bg-blue-700">Contact Me</a>
         </div>
     </section>
 
