--- a/index.html
+++ b/index.html
@@ -81,20 +81,29 @@
 </section>
 
     <!-- Projects Section -->
-    <section id="projects" class="py-20">
-        <div class="container mx-auto text-center">
-            <h3 class="text-3xl font-bold mb-12">Projects</h3>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                <!-- Example Project Card -->
-                <div class="bg-white p-6 shadow-md rounded-md">
-                    <h4 class="text-xl font-semibold mb-2">Network Segmentation Project</h4>
-                    <p class="text-lg">Segregated corporate network for improved security and reduced attack surface.</p>
-                </div>
-                <!-- Add more projects as needed -->
+<section id="projects" class="py-20">
+    <div class="container mx-auto text-center">
+        <h3 class="text-3xl font-bold mb-12">Projects</h3>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+            <!-- Network Segmentation Project Card -->
+            <div class="bg-white p-6 shadow-md rounded-md">
+                <h4 class="text-xl font-semibold mb-2">
+                    <a href="https://github.com/yourusername/network-segmentation-project" target="_blank" class="text-blue-600 hover:text-blue-800">
+                        Network Segmentation Project
+                    </a>
+                </h4>
+                <p class="text-lg mb-4">Segregated corporate network for improved security and reduced attack surface.</p>
+                <ul class="text-left text-sm">
+                    <li><i class="fas fa-check text-green-500 mr-2"></i>Implemented VLAN segmentation</li>
+                    <li><i class="fas fa-check text-green-500 mr-2"></i>Configured firewall rules for inter-VLAN communication</li>
+                    <li><i class="fas fa-check text-green-500 mr-2"></i>Deployed network access control (NAC) solution</li>
+                </ul>
             </div>
+            <!-- Add more projects as needed -->
         </div>
-    </section>
-
+    </div>
+</section>
+            
     <!-- Contact Section -->
     <section id="contact" class="bg-gray-800 text-white py-20">
         <div class="container mx-auto text-center">
