--- a/index.html
+++ b/index.html
@@ -4,118 +4,159 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio - Networking and Information Systems Security</title>
-    <!-- Latest CSS Framework: Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Latest JavaScript Framework: Alpine.js -->
     <script src="https://unpkg.com/alpinejs@3.10.5" defer></script>
-    <!-- FontAwesome for Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
+        body {
+            font-family: 'Roboto', sans-serif;
+            background: linear-gradient(135deg, #1a202c 0%, #2d3748 100%);
+            color: #e2e8f0;
+        }
+        .neon-text {
+            text-shadow: 0 0 5px #4fd1c5, 0 0 10px #4fd1c5, 0 0 20px #4fd1c5;
+        }
+        .glass-effect {
+            background: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(10px);
+            border-radius: 10px;
+            border: 1px solid rgba(255, 255, 255, 0.2);
+        }
+        .hover-scale {
+            transition: transform 0.3s ease;
+        }
+        .hover-scale:hover {
+            transform: scale(1.05);
+        }
+    </style>
 </head>
-<body class="bg-gray-100 text-gray-900 font-sans">
+<body class="min-h-screen">
     <!-- Navbar -->
-    <nav class="bg-gray-800 p-4">
-        <div class="container mx-auto flex justify-between items-center">
-            <h1 class="text-white text-xl font-bold">My Portfolio</h1>
-            <ul class="flex space-x-4">
-                <li><a href="#about" class="text-white hover:text-blue-400">About</a></li>
-                <li><a href="#skills" class="text-white hover:text-blue-400">Skills</a></li>
-                <li><a href="#projects" class="text-white hover:text-blue-400">Projects</a></li>
-                <li><a href="#contact" class="text-white hover:text-blue-400">Contact</a></li>
+    <nav class="fixed w-full z-10 glass-effect">
+        <div class="container mx-auto flex justify-between items-center p-4">
+            <h1 class="text-2xl font-bold neon-text">My Portfolio</h1>
+            <ul class="flex space-x-6">
+                <li><a href="#about" class="hover:text-blue-400 transition duration-300">About</a></li>
+                <li><a href="#skills" class="hover:text-blue-400 transition duration-300">Skills</a></li>
+                <li><a href="#projects" class="hover:text-blue-400 transition duration-300">Projects</a></li>
+                <li><a href="#contact" class="hover:text-blue-400 transition duration-300">Contact</a></li>
             </ul>
         </div>
     </nav>
 
     <!-- Header Section -->
-    <header class="bg-gray-700 text-white py-20">
-        <div class="container mx-auto text-center">
-            <h2 class="text-4xl font-bold mb-4">Hello, I'm Steven Jackson</h2>
-            <p class="text-xl">A Networking & Information Systems Security Specialist</p>
+    <header class="h-screen flex items-center justify-center">
+        <div class="text-center">
+            <h2 class="text-5xl font-bold mb-4 neon-text">Hello, I'm [Your Name]</h2>
+            <p class="text-2xl">A Networking & Information Systems Security Specialist</p>
         </div>
     </header>
 
     <!-- About Section -->
     <section id="about" class="py-20">
         <div class="container mx-auto text-center">
-            <h3 class="text-3xl font-bold mb-4">About Me</h3>
-            <p class="text-lg">I'm a passionate and experienced networking and information systems security professional with extensive skills in configuring, securing, and managing complex networks. I thrive on solving security challenges and ensuring robust information protection systems.</p>
+            <h3 class="text-4xl font-bold mb-8 neon-text">About Me</h3>
+            <p class="text-xl max-w-3xl mx-auto">I'm a passionate and experienced networking and information systems security professional with extensive skills in configuring, securing, and managing complex networks. I thrive on solving security challenges and ensuring robust information protection systems.</p>
         </div>
     </section>
 
     <!-- Skills Section -->
-<section id="skills" class="bg-gray-200 py-20">
-    <div class="container mx-auto">
-        <h3 class="text-3xl font-bold text-center mb-12">Skills</h3>
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-            <div class="bg-white p-6 shadow-md rounded-md text-center">
-                <i class="fas fa-network-wired text-4xl text-blue-600 mb-4"></i>
-                <h4 class="text-xl font-semibold"><a href="https://en.wikipedia.org/wiki/Computer_network" target="_blank" class="hover:text-blue-600">Network Configuration</a></h4>
-                <p>Designing and configuring reliable networks using the latest technologies.</p>
-            </div>
-            <div class="bg-white p-6 shadow-md rounded-md text-center">
-                <i class="fas fa-shield-alt text-4xl text-green-600 mb-4"></i>
-                <h4 class="text-xl font-semibold"><a href="https://en.wikipedia.org/wiki/Information_security" target="_blank" class="hover:text-green-600">Information Security</a></h4>
-                <p>Implementing network firewalls, endpoint security, and incident response systems.</p>
-            </div>
-            <div class="bg-white p-6 shadow-md rounded-md text-center">
-                <i class="fas fa-user-secret text-4xl text-red-600 mb-4"></i>
-                <h4 class="text-xl font-semibold"><a href="https://en.wikipedia.org/wiki/Penetration_test" target="_blank" class="hover:text-red-600">Ethical Hacking</a></h4>
-                <p>Performing vulnerability assessments and penetration testing to uncover security gaps.</p>
-            </div>
-            <div class="bg-white p-6 shadow-md rounded-md text-center">
-                <i class="fas fa-cloud text-4xl text-indigo-600 mb-4"></i>
-                <h4 class="text-xl font-semibold"><a href="https://en.wikipedia.org/wiki/Cloud_computing_security" target="_blank" class="hover:text-indigo-600">Cloud Security</a></h4>
-                <p>Securing cloud infrastructure and ensuring compliance with best practices.</p>
-            </div>
-            <div class="bg-white p-6 shadow-md rounded-md text-center">
-                <i class="fas fa-lock text-4xl text-purple-600 mb-4"></i>
-                <h4 class="text-xl font-semibold"><a href="https://en.wikipedia.org/wiki/Encryption" target="_blank" class="hover:text-purple-600">Encryption Technologies</a></h4>
-                <p>Expertise in encryption protocols for data confidentiality and integrity.</p>
-            </div>
-            <div class="bg-white p-6 shadow-md rounded-md text-center">
-                <i class="fas fa-database text-4xl text-yellow-600 mb-4"></i>
-                <h4 class="text-xl font-semibold"><a href="https://en.wikipedia.org/wiki/Data_security" target="_blank" class="hover:text-yellow-600">Data Protection</a></h4>
-                <p>Ensuring the secure storage, access, and transfer of sensitive information.</p>
+    <section id="skills" class="py-20">
+        <div class="container mx-auto">
+            <h3 class="text-4xl font-bold text-center mb-12 neon-text">Skills</h3>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+                <div class="glass-effect p-6 hover-scale">
+                    <i class="fas fa-network-wired text-4xl text-blue-400 mb-4"></i>
+                    <h4 class="text-xl font-semibold"><a href="https://en.wikipedia.org/wiki/Computer_network" target="_blank" class="hover:text-blue-400">Network Configuration</a></h4>
+                    <p>Designing and configuring reliable networks using the latest technologies.</p>
+                </div>
+                <div class="glass-effect p-6 hover-scale">
+                    <i class="fas fa-shield-alt text-4xl text-green-400 mb-4"></i>
+                    <h4 class="text-xl font-semibold"><a href="https://en.wikipedia.org/wiki/Information_security" target="_blank" class="hover:text-green-400">Information Security</a></h4>
+                    <p>Implementing network firewalls, endpoint security, and incident response systems.</p>
+                </div>
+                <div class="glass-effect p-6 hover-scale">
+                    <i class="fas fa-user-secret text-4xl text-red-400 mb-4"></i>
+                    <h4 class="text-xl font-semibold"><a href="https://en.wikipedia.org/wiki/Penetration_test" target="_blank" class="hover:text-red-400">Ethical Hacking</a></h4>
+                    <p>Performing vulnerability assessments and penetration testing to uncover security gaps.</p>
+                </div>
+                <div class="glass-effect p-6 hover-scale">
+                    <i class="fas fa-cloud text-4xl text-indigo-400 mb-4"></i>
+                    <h4 class="text-xl font-semibold"><a href="https://en.wikipedia.org/wiki/Cloud_computing_security" target="_blank" class="hover:text-indigo-400">Cloud Security</a></h4>
+                    <p>Securing cloud infrastructure and ensuring compliance with best practices.</p>
+                </div>
+                <div class="glass-effect p-6 hover-scale">
+                    <i class="fas fa-lock text-4xl text-purple-400 mb-4"></i>
+                    <h4 class="text-xl font-semibold"><a href="https://en.wikipedia.org/wiki/Encryption" target="_blank" class="hover:text-purple-400">Encryption Technologies</a></h4>
+                    <p>Expertise in encryption protocols for data confidentiality and integrity.</p>
+                </div>
+                <div class="glass-effect p-6 hover-scale">
+                    <i class="fas fa-database text-4xl text-yellow-400 mb-4"></i>
+                    <h4 class="text-xl font-semibold"><a href="https://en.wikipedia.org/wiki/Data_security" target="_blank" class="hover:text-yellow-400">Data Protection</a></h4>
+                    <p>Ensuring the secure storage, access, and transfer of sensitive information.</p>
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
     <!-- Projects Section -->
-<section id="projects" class="py-20">
-    <div class="container mx-auto text-center">
-        <h3 class="text-3xl font-bold mb-12">Projects</h3>
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-            <!-- Network Segmentation Project Card -->
-            <div class="bg-white p-6 shadow-md rounded-md">
-                <h4 class="text-xl font-semibold mb-2">
-                    <a href="https://github.com/yourusername/network-segmentation-project" target="_blank" class="text-blue-600 hover:text-blue-800">
-                        Network Segmentation Project
-                    </a>
-                </h4>
-                <p class="text-lg mb-4">Segregated corporate network for improved security and reduced attack surface.</p>
-                <ul class="text-left text-sm">
-                    <li><i class="fas fa-check text-green-500 mr-2"></i>Implemented VLAN segmentation</li>
-                    <li><i class="fas fa-check text-green-500 mr-2"></i>Configured firewall rules for inter-VLAN communication</li>
-                    <li><i class="fas fa-check text-green-500 mr-2"></i>Deployed network access control (NAC) solution</li>
-                </ul>
-            </div>
-            <!-- Add more projects as needed -->
-        </div>
-    </div>
-</section>
-            
-    <!-- Contact Section -->
-    <section id="contact" class="bg-gray-800 text-white py-20">
+    <section id="projects" class="py-20">
         <div class="container mx-auto text-center">
-            <h3 class="text-3xl font-bold mb-4">Get In Touch</h3>
-            <p class="text-lg mb-8">Feel free to contact me for any project or job opportunity.</p>
-            <a href="mailto:sjackson4430@gmail.com" class="bg-blue-600 text-white py-3 px-8 rounded-md hover:bg-blue-700">Contact Me</a>
+            <h3 class="text-4xl font-bold mb-12 neon-text">Projects</h3>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+                <div class="glass-effect p-6 hover-scale">
+                    <h4 class="text-xl font-semibold mb-2">
+                        <a href="https://github.com/yourusername/network-segmentation-project" target="_blank" class="text-blue-400 hover:text-blue-300">
+                            Network Segmentation Project
+                        </a>
+                    </h4>
+                    <p class="text-lg mb-4">Segregated corporate network for improved security and reduced attack surface.</p>
+                    <ul class="text-left text-sm">
+                        <li><i class="fas fa-check text-green-400 mr-2"></i>Implemented VLAN segmentation</li>
+                        <li><i class="fas fa-check text-green-400 mr-2"></i>Configured firewall rules for inter-VLAN communication</li>
+                        <li><i class="fas fa-check text-green-400 mr-2"></i>Deployed network access control (NAC) solution</li>
+                    </ul>
+                </div>
+                <!-- Add more projects as needed -->
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="py-20">
+        <div class="container mx-auto text-center">
+            <h3 class="text-4xl font-bold mb-8 neon-text">Get In Touch</h3>
+            <p class="text-xl mb-8">Feel free to contact me for any project or job opportunity.</p>
+            <a href="mailto:sjackson4430@gmail.com" class="bg-blue-600 text-white py-3 px-8 rounded-full hover:bg-blue-700 transition duration-300 inline-block">Contact Me</a>
         </div>
     </section>
 
     <!-- Footer -->
-    <footer class="bg-gray-900 text-center text-white py-4">
+    <footer class="text-center py-4">
         <p>&copy; [Your Name] 2024. All rights reserved.</p>
     </footer>
+
+    <script>
+        // Animate elements on scroll
+        function animateOnScroll() {
+            gsap.from('.glass-effect', {
+                scrollTrigger: {
+                    trigger: '.glass-effect',
+                    start: 'top bottom',
+                    end: 'bottom top',
+                    scrub: 1
+                },
+                y: 100,
+                opacity: 0,
+                duration: 1,
+                stagger: 0.2
+            });
+        }
+
+        // Run animation on page load
+        window.addEventListener('load', animateOnScroll);
+    </script>
 </body>
 </html>
