--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <!-- Header Section -->
     <header class="h-screen flex items-center justify-center">
         <div class="text-center">
-            <h2 class="text-5xl font-bold mb-4 neon-text">Hello, I'm [Your Name]</h2>
+            <h2 class="text-5xl font-bold mb-4 neon-text">Hello, I'm Steven Jackson</h2>
             <p class="text-2xl">A Networking & Information Systems Security Specialist</p>
         </div>
     </header>
