--- a/index.html
+++ b/index.html
@@ -63,40 +63,33 @@
         </div>
     </section>
     
-<!-- Chatbot -->
-<div id="chatbot-icon" class="fixed bottom-5 right-5 bg-blue-600 text-white p-4 rounded-full cursor-pointer hover:bg-blue-700 transition duration-300">
-    <i class="fas fa-comment-dots text-2xl"></i>
-</div>
-
-<div id="chatbot-window" class="fixed bottom-20 right-5 w-80 bg-white rounded-lg shadow-lg hidden">
-    <div class="bg-blue-600 text-white p-4 rounded-t-lg flex justify-between items-center">
-        <h4 class="font-bold">Portfolio Chatbot</h4>
-        <button id="close-chat" class="text-white hover:text-gray-200">&times;</button>
-    </div>
-    <div id="chat-messages" class="h-80 overflow-y-auto p-4"></div>
-    <div class="p-4 border-t">
-        <input type="text" id="user-input" placeholder="Type your message..." class="w-full p-2 border rounded">
-    </div>
-</div>
+<!-- ... previous HTML code ... -->
 
 <script>
+    console.log("Chatbot script starting...");
+
     const chatbotIcon = document.getElementById('chatbot-icon');
     const chatbotWindow = document.getElementById('chatbot-window');
     const closeChat = document.getElementById('close-chat');
     const chatMessages = document.getElementById('chat-messages');
     const userInput = document.getElementById('user-input');
 
+    console.log("Elements selected:", { chatbotIcon, chatbotWindow, closeChat, chatMessages, userInput });
+
     chatbotIcon.addEventListener('click', () => {
+        console.log("Chat icon clicked");
         chatbotWindow.classList.toggle('hidden');
     });
 
     closeChat.addEventListener('click', () => {
+        console.log("Close chat clicked");
         chatbotWindow.classList.add('hidden');
     });
 
     userInput.addEventListener('keypress', (e) => {
         if (e.key === 'Enter') {
             const message = userInput.value.trim();
+            console.log("User pressed Enter. Message:", message);
             if (message) {
                 addMessage('user', message);
                 respondToUser(message);
@@ -106,6 +99,7 @@
     });
 
     function addMessage(sender, message) {
+        console.log(`Adding message from ${sender}:`, message);
         const messageElement = document.createElement('div');
         messageElement.classList.add('mb-2', sender === 'user' ? 'text-right' : 'text-left');
         messageElement.innerHTML = `<span class="inline-block p-2 rounded-lg ${sender === 'user' ? 'bg-blue-100' : 'bg-gray-200'}">${message}</span>`;
@@ -114,6 +108,7 @@
     }
 
     function respondToUser(message) {
+        console.log("Responding to user message:", message);
         const lowercaseMessage = message.toLowerCase();
         let response = "I'm sorry, I don't have information about that. Can you ask me something related to my skills or projects?";
 
@@ -129,6 +124,7 @@
             response = "Hello! How can I assist you today? Feel free to ask about my skills, projects, or how to get in touch.";
         }
 
+        console.log("Bot response:", response);
         setTimeout(() => {
             addMessage('bot', response);
         }, 500);
@@ -136,9 +132,11 @@
 
     // Initial greeting
     setTimeout(() => {
+        console.log("Sending initial greeting");
         addMessage('bot', "Hello! I'm the portfolio chatbot. How can I help you today?");
     }, 1000);
-</script>
+
+    
     <!-- Skills Section -->
     <section id="skills" class="py-20">
         <div class="container mx-auto">
