--- a/index.html
+++ b/index.html
@@ -63,6 +63,21 @@
         </div>
     </section>
     
+<!-- Chatbot -->
+<div id="chatbot-icon" class="fixed bottom-5 right-5 bg-blue-600 text-white p-4 rounded-full cursor-pointer hover:bg-blue-700 transition duration-300">
+    <i class="fas fa-comment-dots text-2xl"></i>
+</div>
+
+<div id="chatbot-window" class="fixed bottom-20 right-5 w-80 bg-white rounded-lg shadow-lg hidden">
+    <div class="bg-blue-600 text-white p-4 rounded-t-lg flex justify-between items-center">
+        <h4 class="font-bold">Portfolio Chatbot</h4>
+        <button id="close-chat" class="text-white hover:text-gray-200">&times;</button>
+    </div>
+    <div id="chat-messages" class="h-80 overflow-y-auto p-4"></div>
+    <div class="p-4 border-t">
+        <input type="text" id="user-input" placeholder="Type your message..." class="w-full p-2 border rounded">
+    </div>
+</div>
 <!-- ... previous HTML code ... -->
 
 <script>
@@ -136,7 +151,9 @@
         addMessage('bot', "Hello! I'm the portfolio chatbot. How can I help you today?");
     }, 1000);
 
-    
+    console.log("Chatbot script completed");
+</script>
+
     <!-- Skills Section -->
     <section id="skills" class="py-20">
         <div class="container mx-auto">
