--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <div class="glass-effect p-6 hover-scale">
                     <h4 class="text-xl font-semibold mb-2">
-                        <a href="https://github.com/yourusername/network-segmentation-project" target="_blank" class="text-blue-400 hover:text-blue-300">
+                        <a href="https://github.com/sjackson4430/network-segmentation-project" target="_blank" class="text-blue-400 hover:text-blue-300">
                             Network Segmentation Project
                         </a>
                     </h4>
@@ -205,7 +205,7 @@ print(f"Open ports are: {open_ports}")
 
     <!-- Footer -->
     <footer class="text-center py-4">
-        <p>&copy; [Your Name] 2024. All rights reserved.</p>
+        <p>&copy; Steven Jackson 2024. All rights reserved.</p>
     </footer>
 
     <script>
