--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Steven Jackson's portfolio - Networking and Information Systems Security Specialist">
-    <title>My Portfolio - Networking and Information Systems Security</title>
+    <title>Steven Jackson - Networking and Information Systems Security Portfolio</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/alpinejs@3.10.5" defer></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js" defer></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js" defer integrity="sha512-f8mwTB+Bs8a5c46DEm7HQLcJuHMBaH/UFlcgyetMqqkvTcYg4g5VXsYR71b3qC82lZytjNYvBj2pf0VekA9/FQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/chatbot.css">
     <style>
@@ -41,7 +41,7 @@
         <!-- Navbar -->
         <nav class="fixed w-full z-10 glass-effect">
             <div class="container mx-auto flex justify-between items-center p-4">
-                <h1 class="text-2xl font-bold neon-text">My Portfolio</h1>
+                <h1 class="text-2xl font-bold neon-text">Steven Jackson</h1>
                 <ul class="flex space-x-6">
                     <li><a href="#about" class="hover:text-blue-400 transition duration-300">About</a></li>
                     <li><a href="#skills" class="hover:text-blue-400 transition duration-300">Skills</a></li>
@@ -68,44 +68,39 @@
             </div>
         </section>
         
-        <!-- ... previous HTML code ... -->
-
-        <script src="https://cdn.botpress.cloud/webchat/v2.2/inject.js"></script>
-        <script src="https://files.bpcontent.cloud/2024/10/08/04/20241008043851-SUHO8AVV.js"></script>
-        
         <!-- Skills Section -->
         <section id="skills" class="py-20">
             <div class="container mx-auto">
                 <h3 class="text-4xl font-bold text-center mb-12 neon-text">Skills</h3>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                     <div class="glass-effect p-6 hover-scale">
-                        <i class="fas fa-network-wired text-4xl text-blue-400 mb-4"></i>
-                        <h4 class="text-xl font-semibold"><a href="https://en.wikipedia.org/wiki/Computer_network" target="_blank" class="hover:text-blue-400">Network Configuration</a></h4>
+                        <i class="fas fa-network-wired text-4xl text-blue-400 mb-4" aria-hidden="true"></i>
+                        <h4 class="text-xl font-semibold"><a href="https://en.wikipedia.org/wiki/Computer_network" target="_blank" rel="noopener noreferrer" class="hover:text-blue-400">Network Configuration</a></h4>
                         <p>Designing and configuring reliable networks using the latest technologies.</p>
                     </div>
                     <div class="glass-effect p-6 hover-scale">
-                        <i class="fas fa-shield-alt text-4xl text-green-400 mb-4"></i>
-                        <h4 class="text-xl font-semibold"><a href="https://en.wikipedia.org/wiki/Information_security" target="_blank" class="hover:text-green-400">Information Security</a></h4>
+                        <i class="fas fa-shield-alt text-4xl text-green-400 mb-4" aria-hidden="true"></i>
+                        <h4 class="text-xl font-semibold"><a href="https://en.wikipedia.org/wiki/Information_security" target="_blank" rel="noopener noreferrer" class="hover:text-green-400">Information Security</a></h4>
                         <p>Implementing network firewalls, endpoint security, and incident response systems.</p>
                     </div>
                     <div class="glass-effect p-6 hover-scale">
-                        <i class="fas fa-user-secret text-4xl text-red-400 mb-4"></i>
-                        <h4 class="text-xl font-semibold"><a href="https://en.wikipedia.org/wiki/Penetration_test" target="_blank" class="hover:text-red-400">Ethical Hacking</a></h4>
+                        <i class="fas fa-user-secret text-4xl text-red-400 mb-4" aria-hidden="true"></i>
+                        <h4 class="text-xl font-semibold"><a href="https://en.wikipedia.org/wiki/Penetration_test" target="_blank" rel="noopener noreferrer" class="hover:text-red-400">Ethical Hacking</a></h4>
                         <p>Performing vulnerability assessments and penetration testing to uncover security gaps.</p>
                     </div>
                     <div class="glass-effect p-6 hover-scale">
-                        <i class="fas fa-cloud text-4xl text-indigo-400 mb-4"></i>
-                        <h4 class="text-xl font-semibold"><a href="https://en.wikipedia.org/wiki/Cloud_computing_security" target="_blank" class="hover:text-indigo-400">Cloud Security</a></h4>
+                        <i class="fas fa-cloud text-4xl text-indigo-400 mb-4" aria-hidden="true"></i>
+                        <h4 class="text-xl font-semibold"><a href="https://en.wikipedia.org/wiki/Cloud_computing_security" target="_blank" rel="noopener noreferrer" class="hover:text-indigo-400">Cloud Security</a></h4>
                         <p>Securing cloud infrastructure and ensuring compliance with best practices.</p>
                     </div>
                     <div class="glass-effect p-6 hover-scale">
-                        <i class="fas fa-lock text-4xl text-purple-400 mb-4"></i>
-                        <h4 class="text-xl font-semibold"><a href="https://en.wikipedia.org/wiki/Encryption" target="_blank" class="hover:text-purple-400">Encryption Technologies</a></h4>
+                        <i class="fas fa-lock text-4xl text-purple-400 mb-4" aria-hidden="true"></i>
+                        <h4 class="text-xl font-semibold"><a href="https://en.wikipedia.org/wiki/Encryption" target="_blank" rel="noopener noreferrer" class="hover:text-purple-400">Encryption Technologies</a></h4>
                         <p>Expertise in encryption protocols for data confidentiality and integrity.</p>
                     </div>
                     <div class="glass-effect p-6 hover-scale">
-                        <i class="fas fa-database text-4xl text-yellow-400 mb-4"></i>
-                        <h4 class="text-xl font-semibold"><a href="https://en.wikipedia.org/wiki/Data_security" target="_blank" class="hover:text-yellow-400">Data Protection</a></h4>
+                        <i class="fas fa-database text-4xl text-yellow-400 mb-4" aria-hidden="true"></i>
+                        <h4 class="text-xl font-semibold"><a href="https://en.wikipedia.org/wiki/Data_security" target="_blank" rel="noopener noreferrer" class="hover:text-yellow-400">Data Protection</a></h4>
                         <p>Ensuring the secure storage, access, and transfer of sensitive information.</p>
                     </div>
                 </div>
@@ -119,22 +114,30 @@
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                     <div class="glass-effect p-6 hover-scale">
                         <h4 class="text-xl font-semibold mb-2">
-                            <a href="https://github.com/sjackson4430/network-segmentation-project" target="_blank" class="text-blue-400 hover:text-blue-300">
+                            <a href="https://github.com/sjackson4430/network-segmentation-project" target="_blank" rel="noopener noreferrer" class="text-blue-400 hover:text-blue-300">
                                 Network Segmentation Project
                             </a>
                         </h4>
                         <p class="text-lg mb-4">Segregated corporate network for improved security and reduced attack surface.</p>
                         <ul class="text-left text-sm">
-                            <li><i class="fas fa-check text-green-400 mr-2"></i>Implemented VLAN segmentation</li>
-                            <li><i class="fas fa-check text-green-400 mr-2"></i>Configured firewall rules for inter-VLAN communication</li>
-                            <li><i class="fas fa-check text-green-400 mr-2"></i>Deployed network access control (NAC) solution</li>
+                            <li><i class="fas fa-check text-green-400 mr-2" aria-hidden="true"></i>Implemented VLAN segmentation</li>
+                            <li><i class="fas fa-check text-green-400 mr-2" aria-hidden="true"></i>Configured firewall rules for inter-VLAN communication</li>
+                            <li><i class="fas fa-check text-green-400 mr-2" aria-hidden="true"></i>Deployed network access control (NAC) solution</li>
                         </ul>
                     </div>
-                    <!-- Add more projects as needed -->
+                    <div class="glass-effect p-6 hover-scale">
+                        <h4 class="text-xl font-semibold mb-2">
+                            <a href="CyberCore/frontend/index.html" class="text-blue-400 hover:text-blue-300">
+                                CyberCore: The Digital Fortress
+                            </a>
+                        </h4>
+                        <p class="text-lg mb-4">An interactive web application demonstrating cybersecurity concepts.</p>
+                        <a href="https://github.com/sjackson4430/portfolio/tree/main/CyberCore" target="_blank" rel="noopener noreferrer" class="text-sm text-blue-400 hover:text-blue-300">View on GitHub</a>
+                    </div>
+                    <!-- Add more projects here -->
                 </div>
             </div>
         </section>
-        <!-- ... existing code ... -->
 
         <!-- Python Code Showcase Section -->
         <section id="code-showcase" class="py-20">
@@ -144,57 +147,55 @@
                     <h4 class="text-2xl font-semibold mb-4 text-blue-400">Network Port Scanner</h4>
                     <p class="mb-4">A Python script that scans for open ports on a given IP address:</p>
                     <pre class="bg-gray-800 text-green-400 p-4 rounded-lg overflow-x-auto">
-        <code>import socket
-        import threading
-        from queue import Queue
+<code>import socket
+import threading
+from queue import Queue
 
-        target = "example.com"
-        queue = Queue()
-        open_ports = []
+target = "example.com"
+queue = Queue()
+open_ports = []
 
-        def portscan(port):
-            try:
-                sock = socket.socket(socket.AF_INET, socket.SOCK_STREAM)
-                sock.connect((target, port))
-                return True
-            except:
-                return False
+def portscan(port):
+    try:
+        sock = socket.socket(socket.AF_INET, socket.SOCK_STREAM)
+        sock.connect((target, port))
+        return True
+    except:
+        return False
 
-        def fill_queue(port_list):
-            for port in port_list:
-                queue.put(port)
+def fill_queue(port_list):
+    for port in port_list:
+        queue.put(port)
 
-        def worker():
-            while not queue.empty():
-                port = queue.get()
-                if portscan(port):
-                    print(f"Port {port} is open!")
-                    open_ports.append(port)
+def worker():
+    while not queue.empty():
+        port = queue.get()
+        if portscan(port):
+            print(f"Port {port} is open!")
+            open_ports.append(port)
 
-        port_list = range(1, 1024)
-        fill_queue(port_list)
+port_list = range(1, 1024)
+fill_queue(port_list)
 
-        thread_list = []
+thread_list = []
 
-        for t in range(100):
-            thread = threading.Thread(target=worker)
-            thread_list.append(thread)
+for t in range(100):
+    thread = threading.Thread(target=worker)
+    thread_list.append(thread)
 
-        for thread in thread_list:
-            thread.start()
+for thread in thread_list:
+    thread.start()
 
-        for thread in thread_list:
-            thread.join()
+for thread in thread_list:
+    thread.join()
 
-        print(f"Open ports are: {open_ports}")
-        </code>
+print(f"Open ports are: {open_ports}")
+</code>
                     </pre>
                     <p class="mt-4">This script demonstrates multithreaded port scanning, a useful technique in network security analysis.</p>
                 </div>
             </div>
         </section>
-
-        <!-- ... rest of the existing code ... -->
 
         <!-- Contact Section -->
         <section id="contact" class="py-20">
@@ -207,9 +208,14 @@
 
         <!-- Footer -->
         <footer class="text-center py-4">
-            <p>&copy; Steven 2024. All rights reserved.</p>
+            <p>&copy; <span id="current-year"></span> Steven Jackson. All rights reserved.</p>
         </footer>
     </main>
     <script src="js/main.js" defer></script>
+    <script src="https://cdn.botpress.cloud/webchat/v2.2/inject.js"></script>
+    <script src="https://files.bpcontent.cloud/2024/10/08/04/20241008043851-SUHO8AVV.js"></script>
+    <script>
+        document.getElementById('current-year').textContent = new Date().getFullYear();
+    </script>
 </body>
 </html>
